--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 {% with page.body|markdown as parsed_md %}
-<div class="row">
-    <div class="col-9">
+<div class="row flex-column-reverse flex-lg-row">
+    <div class="col-lg-9">
         <h1 class="page-title">
             <span class="underline">
                 {{ page.title }}
@@ -12,7 +12,7 @@
         </h1>
         {{ parsed_md.0 }}
     </div>
-    <div class="col-3">
+    <div class="col-lg-3">
         <div class="side-panel-container">
             <aside class="side-panel border-accent">
                 <h1 class="toc-title">Zuletzt bearbeitet</h1>
