--- a/myhpi/core/templates/core/minutes.html
+++ b/myhpi/core/templates/core/minutes.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% load wagtailmarkdown %}
+{% load core_extras %}
 {% load minutes_tags %}
 
 {% block content %}
