Fix rendering of tenca pages

--- a/myhpi/tenca_django/templates/tenca_django/manage_subscription.html
+++ b/myhpi/tenca_django/templates/tenca_django/manage_subscription.html
@@ -24,7 +24,8 @@
                 Email
             </label>
             <div class="col-md-9">
-                <input type="email" name="email" value="{{ form.email }}" class="form-control" placeholder="Email" title="" required="" id="id_email">
+                {{ form.email }}
+                <!-- <input type="email" name="email" value="" class="form-control" placeholder="Email" title="" required="" id="id_email"> -->
             </div>
         </div>
 		<div class="form-group">
