--- a/myhpi/tenca_django/templates/tenca_django/dashboard.html
+++ b/myhpi/tenca_django/templates/tenca_django/dashboard.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-		<div class="form-group">
+		<div class="form-group" style="padding-top: 10px">
 			<button type="submit" class="btn btn-primary">Create</button>
 		</div>
 	</form>
