--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -21,7 +21,7 @@
         {% endblock %}
     </title>
     <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     {# Global stylesheets #}
     <link type="text/css" href="{% static "scss/myHPI.scss"|compile %}" rel="stylesheet">
@@ -32,25 +32,37 @@
     {% endblock %}
 </head>
 
-<body class="bg-background myhpi-accent-yellow {% block body_class %}{% endblock %}">
+<body class="bg-background myhpi-accent {% block body_class %}{% endblock %}">
     {% wagtailuserbar %}
 
-    <nav class="navbar-myhpi container-lg page d-print-none sm-hide-on-scroll">
-        <div class="navbar-top bg-white">
-            {% with all_pages|all_sub_menu_pages_by_id as sub_pages_by_level_and_id %}
-            <div class="page-content d-flex">
-                <div>
+    <nav
+        class="navbar-myhpi page d-flex flex-column d-print-none container-lg fixed-top sticky-xl-top xl-hide-on-scroll">
+        <div class="navbar-top bg-white d-flex">
+            {% with all_pages|all_sub_nav_pages_by_id as sub_pages_by_level_and_id %}
+            <div class="page-content d-flex flex-grow-1 flex-xl-grow-0">
+                <div id="navbar-left" class="d-flex align-items-center">
                     <a class="nav-brand" href="{% pageurl root_page %}">
                         <img src="{% static 'img/FSR_DE_color.svg' %}" class="w-100" alt="Zur Startseite">
                     </a>
                 </div>
-                {% build_menu_level sub_pages_by_level_and_id 0 %}
+                {% build_nav_level sub_pages_by_level_and_id 0 %}
+                <div id="navbar-right" class="flex-fill justify-content-end d-flex align-items-center">
+                    <a class="nav-link" onclick="toggleHideOnScrollBlock(event)" href="#">
+                        {% bs_icon 'person-circle' size='1.4rem' %}
+                    </a>
+                    <a class="nav-link d-xl-none" data-bs-toggle="collapse" href="#nav-item-container-root"
+                        onclick="toggleHideOnScrollBlock(event)"
+                        role="button"
+                        aria-expanded="false" aria-controls="nav-item-container-root">
+                        {% bs_icon 'list' size='1.4rem' %}
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="navbar-bottom">
-            <div class="navbar-bottom-content page-content d-flex">
-                {% build_menu_level sub_pages_by_level_and_id 1 %}
-                {% build_menu_level sub_pages_by_level_and_id 2 %}
+        <div class="navbar-bottom d-flex overflow-hidden">
+            <div class="navbar-bottom-content page-content d-flex flex-grow-1 flex-xl-grow-0">
+                {% build_nav_level sub_pages_by_level_and_id 1 %}
+                {% build_nav_level sub_pages_by_level_and_id 2 %}
             </div>
             <div class="navbar-bottom-line"></div>
         </div>
@@ -91,6 +103,7 @@
 
     {# Global javascript #}
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/utils.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/myHPI.js' %}"></script>
 
     {% block extra_js %}
