--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -39,14 +39,13 @@
     <nav
         class="navbar-myhpi page d-flex flex-column d-print-none container-lg fixed-top sticky-xl-top xl-hide-on-scroll">
         <div class="navbar-top bg-white d-flex">
-            {% with all_pages|all_sub_nav_pages_by_id as sub_pages_by_level_and_id %}
             <div class="page-content d-flex flex-grow-1 flex-xl-grow-0">
                 <div id="navbar-left" class="d-flex align-items-center">
                     <a class="nav-brand" href="{% pageurl root_page %}">
                         <img src="{% static 'img/myHPI-Logo.svg' %}" class="h-100" alt="Zur Startseite">
                     </a>
                 </div>
-                {% build_nav_level sub_pages_by_level_and_id 0 %}
+                <div id="nav-level-0" class="nav-level"></div>
                 <div id="navbar-right" class="flex-fill justify-content-end d-flex align-items-center">
                     <a class="nav-link" onclick="toggleHideOnScrollBlock(event)" href="#">
                         {% bs_icon 'person-circle' size='1.4rem' %}
@@ -62,12 +61,14 @@
         </div>
         <div class="navbar-bottom d-flex overflow-hidden">
             <div class="navbar-bottom-content page-content d-flex flex-grow-1 flex-xl-grow-0">
-                {% build_nav_level sub_pages_by_level_and_id 1 %}
-                {% build_nav_level sub_pages_by_level_and_id 2 %}
+                {% build_nav_level nav_root_pages %}
+
+                <!-- For navbar desktop mode: Wrappers for sub level containers of root level in navbar -->
+                <div id="nav-level-1" class="nav-level"></div>
+                <div id="nav-level-2" class="nav-level"></div>
             </div>
             <div class="navbar-bottom-line"></div>
         </div>
-        {% endwith %}
     </nav>
 
     <div class="container-lg page bg-white">
@@ -105,6 +106,7 @@
     {# Global javascript #}
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/utils.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/navbar.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/myHPI.js' %}"></script>
 
     {% block extra_js %}
