--- a/myhpi/core/templates/core/minutes.html
+++ b/myhpi/core/templates/core/minutes.html
@@ -45,6 +45,16 @@
                 {% endif %}
             <h4 class="d-print-none">Table of contents</h4>
             {{ parsed_md.1 }}
+            {% if page.attachments.all %}
+                <h4 class="d-print-none">Attachments</h4>
+                <ul>
+                {% for attachment in page.attachments.all %}
+                    <li>
+                        <a href="{{ attachment.url }}">{{ attachment.title }}</a>
+                    </li>
+                {% endfor %}
+                </ul>
+            {% endif %}
         </div>
         <div id="minutes-footer" class="d-none d-print-block"></div>
             <div id="minutes-navigation" class="row d-print-none">
