fix: Use width and height units of SVG 1.1 standard

--- a/myhpi/static/scss/navbar.scss
+++ b/myhpi/static/scss/navbar.scss
@@ -132,6 +132,7 @@
 
         .nav-link-icon {
             width: 1rem;
+            height: auto;
             display: block !important;
             margin-left: 0.1rem;
             transform: translateY(2px);
