--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -50,13 +50,13 @@
                         onclick="toggleUserNavbar(event)"
                         role="button"
                         aria-expanded="false" aria-controls="nav-item-container-user">
-                        {% bs_icon 'person-circle' size='1.4rem' %}
+                        {% bs_icon 'person-circle' size='1.4em' %}
                     </a>
                     <a id="nav-mobile-toggle" class="nav-link d-xl-none" href="#nav-item-container-root"
                         onclick="toggleMobileNavbar(event)"
                         role="button"
                         aria-expanded="false" aria-controls="nav-item-container-root">
-                        {% bs_icon 'list' size='1.4rem' %}
+                        {% bs_icon 'list' size='1.4em' %}
                     </a>
                 </div>
             </div>
