--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -117,6 +117,8 @@
         </div>
     </div>
 
+    {% build_footer footer_base %}
+
     {# Global javascript #}
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/utils.js' %}"></script>
