--- a/myhpi/search/templates/search/search_result.html
+++ b/myhpi/search/templates/search/search_result.html
@@ -6,9 +6,13 @@
         <h5>{{ result.title }}</h5>
         <span class="text-dark">
             {% if result.search_description %}
-            {{ result.search_description }}
+                {{ result.search_description }}
             {% else %}
-            {{ result.specific.body|truncatewords:20 }}
+                {% if result.specific.text %}
+                    {{ result.specific.text|truncatewords:20 }}
+                {% else %}
+                    {{ result.specific.body|truncatewords:20 }}
+                {% endif %}
             {% endif %}
         </span>
     </div>
