--- a/myhpi/static/scss/myHPI.scss
+++ b/myhpi/static/scss/myHPI.scss
@@ -174,10 +174,8 @@ h1.toc-title::after {
     color: var(--bs-secondary);
 }
 
-.link.external {
-    .icon {
-        margin-top: -0.25rem;
-    }
+.external-link-icon {
+    margin-top: -0.25rem;
 }
 
 @import "./navbar.scss";
