--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -117,7 +117,7 @@
         </div>
     </div>
 
-    {% build_footer footer_base %}
+    {% insert_footer %}
 
     {# Global javascript #}
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
