fix: Add margin below search pagination

--- a/myhpi/search/templates/search/search.html
+++ b/myhpi/search/templates/search/search.html
@@ -30,7 +30,7 @@
     {% endfor %}
 </ul>
 
-<nav aria-label="Page navigation">
+<nav aria-label="Page navigation" class="d-inline-block">
     <ul class="pagination">
         {% if search_results_page.has_previous %}
         <li class="page-item">
