--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </div>
-        <div class="navbar-bottom d-flex overflow-hidden">
+        <div class="navbar-bottom d-flex">
             <div class="navbar-bottom-content page-content d-flex flex-column flex-xl-row flex-grow-1 flex-xl-grow-0">
                 {% build_nav_level nav_root_pages %}
 
