--- a/myhpi/core/templates/core/minutes.html
+++ b/myhpi/core/templates/core/minutes.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="row minutes-container">
-        {% with page.text|markdown as parsed_md %}
+        {% with page.body|markdown as parsed_md %}
         <div class="d-none d-print-block minutes-title">
         <h1>{{  page.title }}</h1>
         </div>
